Main page is typeseted

--- a/_app/404.pug
+++ b/_app/404.pug
@@ -1,5 +1,5 @@
 -var path = '../';
--var head_url = 'https://ipo.mycapitalland.ru/404/';
+-var head_url = 'https://sochi.mycapitalland.ru/404/';
 -var head_title = 'Упс... Что-то не так!';
 -var head_description = 'Похоже, страницы с указанным адресом не существует или Вы ввели неверный адрес';
 -var styles = path+'css/thanks.min.css';
