--- a/_app/confirmed.pug
+++ b/_app/confirmed.pug
@@ -1,5 +1,5 @@
 -var path = '../';
--var head_url = 'https://ipo.mycapitalland.ru/confirmed/';
+-var head_url = 'https://sochi.mycapitalland.ru/confirmed/';
 -var head_title = 'Ваш почтовый адрес успешно подтверждён!';
 -var head_description = 'Присоединяйтесь к закрытой группе в Telegram!';
 //-var head_img = 'img/banner.jpg';
