--- a/_app/pug/conf/1-main.pug
+++ b/_app/pug/conf/1-main.pug
@@ -3,8 +3,8 @@ section#main
 		include ../base/1-header
 		.container
 			h1.main-title Ваш почтовый адрес успешно подтверждён!
-			p.main-text Ещё раз благодарим за регистрацию на онлайн-лекцию 
-				span «IPO – мощный инструмент для приумножения капитала»
+			p.main-text Ещё раз благодарим за регистрацию на онлайн-встречу 
+				span «Инвестиции в недвижимость Сочи»
 			h2.main-subtitle Чтобы не пропустить всю важную информацию, переходите в наш Telegram-бот, если Вы этого ещё не сделали!
 			h3.main-subtitle-2 Для чего?
 			.main-list
@@ -12,15 +12,15 @@ section#main
 					.col-md-4
 						.main-list-item.main-list-item-1
 							.main-list-item-icon.main-list-item-icon-1
-							p.main-list-item-text Готовиться к лекции вместе с нами
+							p.main-list-item-text Готовиться к встрече вместе с нами
 					.col-md-4
 						.main-list-item.main-list-item-2
 							.main-list-item-icon.main-list-item-icon-2
-							p.main-list-item-text Узнать больше о рынке первичных акций
+							p.main-list-item-text Узнать больше о доходной недвижимости
 					.col-md-4
 						.main-list-item.main-list-item-3
 							.main-list-item-icon.main-list-item-icon-3
-							p.main-list-item-text Наблюдать, сколько наши инвесторы зарабатывают за неделю
+							p.main-list-item-text Наблюдать, сколько наши инвесторы заработали в предыдущих проектах
 			a.button-thanks(href="https://mycapital.autoweboffice.ru/index.php?r=form/telegram&id_bot=4")
 				img.button-thanks-img(src=path+"img/icons/tg.png" alt="Telegram")
 				|  Подписаться
