--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -3,19 +3,17 @@ section#main
 	.container
 		.row
 			.col-md-6
-				p.main-pre Приглашаем  Вас на онлайн-встречу
-				h1.main-title «IPO – мощный инструмент 
+				p.main-pre Приглашаем Вас на онлайн-встречу
+				h1.main-title Инвестиции 
 					br
-					| для 
-					span приумножения капитала»
-				h2.main-subtitle Узнайте, как обрести финансовую свободу 
-					br
-					| и не зависеть от зарплаты, начальника и кризиса
+					span в недвижимость Сочи
+				h2.main-subtitle Цены за 1 кв.м. растут, как на дрожжах!
 				.main-info
 					p.main-info-text Дата и время проведения: 
-						span 13 мая, в 19:00(Мск)
+						span 20 мая, в 19:00(Мск)
 					p.main-info-text Ведущий: 
 						span Юрий Медушенко
 			.col-md-6
 				.video-wrapper.video-wrapper-main
-					iframe(src!="https://www.youtube.com/embed/J0HeJYgnhaU?autoplay=1&mute=1&modestbranding=1" allowfullscreen)
+					iframe(src!="https://www.youtube.com/embed/?autoplay=1&mute=1&modestbranding=1" allowfullscreen)
+		h3.main-aftertitle Успейте заработать на этом!
