--- a/_app/pug/main/8-last.pug
+++ b/_app/pug/main/8-last.pug
@@ -2,10 +2,11 @@ mixin sl(cl,sLink)
 	a.soc-link(class!='soc-link-'+cl href!=sLink target="_blank")
 section#last
 	.container
+		h3.last-title Выигрывайте на ажиотажном спросе 
+			br
+			| на объекты недвижимости в Сочи!
 		.footer
-			h5.footer-title ПОДПИСЫВАЙТЕСЬ НА НОВОСТИ, ЧТОБЫ ВСЕГДА БЫТЬ В КУРСЕ САМЫХ ЛУЧШИХ ПРЕДЛОЖЕНИЙ 
-				br
-				| ПО ИНВЕСТИРОВАНИЮ!
+			h5.footer-title ПОДПИСЫВАЙТЕСЬ НА НОВОСТИ, ЧТОБЫ ВСЕГДА БЫТЬ В КУРСЕ САМЫХ ЛУЧШИХ ПРЕДЛОЖЕНИЙ ПО ИНВЕСТИРОВАНИЮ!
 			.soc-links
 				|
 				|
@@ -22,9 +23,6 @@ section#last
 				|
 				|
 				+sl('fb','https://facebook.com/MyCapitalRu/')
-			h6.footer-subtitle Узнайте, как зарабатывать до 30% в долларах ЗА год 
-				br
-				| и не переживать о будущем!
 			p.footer-text Контакты: ООО «Зона Комфорта», ИНН 5029196740, ОГРН 1155029003293
 			p.footer-text Телефон: 
 				a(href="tel:+74950230110" target='_blank') +7 (495) 023-01-10
