--- a/_app/thanks.pug
+++ b/_app/thanks.pug
@@ -1,5 +1,5 @@
 -var path = '../';
--var head_url = 'https://ipo.mycapitalland.ru/thanks/';
+-var head_url = 'https://sochi.mycapitalland.ru/thanks/';
 -var head_title = 'Благодарим за регистрацию на вебинар!';
 -var head_description = 'Присоединяйтесь к закрытой группе в Telegram!';
 //-var head_img = 'img/banner.jpg';
