--- a/_app/styl/styles.min.styl
+++ b/_app/styl/styles.min.styl
@@ -9,10 +9,9 @@
 @import 'base/3-header'
 @import 'main/1-main'
 @import 'main/2-form'
-@import 'main/3-about'
-@import 'main/4-modal-line'
-@import 'main/5-results'
+@import 'main/3-why'
+@import 'main/4-plan'
+@import 'main/5-author'
 @import 'main/6-form-2'
-@import 'main/7-author'
 @import 'main/8-last'
 @import 'main/9-modal'
