Main page is stylezed

--- a/_app/index.pug
+++ b/_app/index.pug
@@ -1,7 +1,7 @@
--var path = '../';
+-var path = '';
 -var head_url = 'https://sochi.mycapitalland.ru/';
--var head_title = '«IPO – мощный инструмент для приумножения капитала»';
--var head_description = 'Узнайте, как обрести финансовую свободу и не зависеть от зарплаты, начальника и кризиса';
+-var head_title = '«Ивестиции в недвижимость Сочи»';
+-var head_description = 'Онлайн-встреча с Юрием Медушенко';
 -var styles = path+'css/styles.min.css';
 -var fav_ico = path+'favicon.ico';
 -var fav_png = path+'favicon.png';
