--- a/_app/pug/main/2-form.pug
+++ b/_app/pug/main/2-form.pug
@@ -11,7 +11,7 @@ section.form-section
 					button(type="submit").button.button-form.button-form-section Записаться
 					.clearfix
 					p.alert-message
-					.checking.checking-form
+					.checking.checking-form.checking-main
 						input(type="checkbox" id="check-1").check
 						label(for="check-1").check-label Я согласен с 
 							a(href=politics target="_blank") условиями обработки
