--- a/_app/pug/main/4-plan.pug
+++ b/_app/pug/main/4-plan.pug
@@ -2,7 +2,7 @@ section#plan
 	.container
 		.rect.rect-plan
 		.content
-			+gt('','Программа онлайн-встречи')
+			+gt('general-title-left','Программа онлайн-встречи')
 			.row
 				.col-md-7
 					.general-wrapper
@@ -13,8 +13,10 @@ section#plan
 							li Доходный объект в Красной Поляне – наш новый проект
 							li Купить – реализовать – заработать: наша инвестиционная стратегия
 							li Короткий путь от инвестора-новичка до миллионера: сколько можно заработать на 1 кв.м. в Сочи
-						+b('', '', href, 'ХОЧУ ПОСЕТИТЬ ОНЛАЙН-ВСТРЕЧУ!')
-						p.plan-text Покупка жилья в Сочи – не мечта, а прибыльный бизнес, открывающий новые горизонты качества жизни!
+						+b('', 'button-up', href, 'ХОЧУ ПОСЕТИТЬ ОНЛАЙН-ВСТРЕЧУ!')
+						p.plan-text Покупка жилья в Сочи – не мечта, 
+							br
+							| а прибыльный бизнес, открывающий новые горизонты качества жизни!
 				.col-md-5
 					.general-img.general-img-plan
 						+imgs('','img/images/laptop.png','Лаптоп')
