--- a/_app/pug/main/5-author.pug
+++ b/_app/pug/main/5-author.pug
@@ -1,11 +1,10 @@
 section#author
 	.container
-		h3.general-title.general-title-author Ведущий онлайн-встречи
-		h4.author-subtitle Юрий Медушенко
+		h3.general-title.general-title-left.general-title-author Ведущий онлайн-встречи - Юрий Медушенко
 		.row
 			.col-md-5.col-md-push-7
 				.general-img.general-img-author
-					+imgs('','img/images/yuriy.jpg','Юрий Медушенко')
+					+imgs('','img/images/yuriy.png','Юрий Медушенко')
 			.col-md-7.col-md-pull-5
 				.rect.rect-author
 				.author-container
