--- a/_app/pug/main/8-last.pug
+++ b/_app/pug/main/8-last.pug
@@ -23,7 +23,8 @@ section#last
 				|
 				|
 				+sl('fb','https://facebook.com/MyCapitalRu/')
-			p.footer-text Контакты: ООО «Зона Комфорта», ИНН 5029196740, ОГРН 1155029003293
+			p.footer-text ООО «Зона Комфорта»,
+			p.footer-text ИНН 5029196740, ОГРН 1155029003293
 			p.footer-text Телефон: 
 				a(href="tel:+74950230110" target='_blank') +7 (495) 023-01-10
 			p.footer-text E-mail: 
