--- a/_app/styl/base/2-base-1.styl
+++ b/_app/styl/base/2-base-1.styl
@@ -4,25 +4,24 @@
 	margin 0 auto
 	text-decoration none
 	color: #fff
-	box-shadow: inset 1px 1px 0 0 #f7f3aa
-	background-color: #cc922f
-	padding 21px 30px
-	width 100%
-	max-width 325px
+	background-color: mBr
+	padding 15px 35px
+	// width 100%
+	min-width 320px
+	// max-width 325px
 	font-family: GM
-	font-size: 16px
+	font-size: 18px
 	font-weight: normal
 	text-transform uppercase
 	transition: all .3s ease
 	&:focus
 		text-decoration none
 		color #fff
-		background-color: #cc922f
+		background-color: mBr
 	&:hover
 		text-decoration none
 		color #fff
-		background-color: #cc922f - 25%
-		box-shadow: inset -1px -1px 0 0 #f7f3aa
+		background-color: mBr - 25%
 	&-wrapper-center
 		text-align center
 	@media screen and (max-width 991px)
@@ -35,9 +34,8 @@
 		min-width: 1px
 		font-size: 16px
 .general-wrapper
-	padding 30px 40px
+	padding 40px 25px 55px
 	background-color: #f8f8f8
-	box-shadow: 0px 0px 46.41px 4.59px rgba(0, 0, 0, 0.1);
 	position relative
 	z-index 25
 	@media screen and (max-width 560px)
@@ -74,6 +72,8 @@
 		margin-bottom: 30px
 	@media screen and (max-width 385px)
 		font-size: 22px
+	&-left
+		text-align: left
 .general-list
 	list-style none
 	li
