--- a/_app/styl/base/3-header.styl
+++ b/_app/styl/base/3-header.styl
@@ -16,7 +16,7 @@ header
 			position: fixed;
 			width: 300px;
 			height: 100%;
-			background-color: #16133f
+			background-color: #0A1D37
 			padding: 20px;
 			z-index: 190;
 			top 0
@@ -30,10 +30,10 @@ header
 	&-link
 		float: left
 	&-text
-		border-left: 1px solid #fff
+		border-left: 1px solid mBr
 		margin-left: 10px
 		padding-left: 10px
-		color: #fff
+		color: mBr
 		font-size: 14px
 		font-family: GM
 		font-weight: normal
@@ -55,7 +55,7 @@ header
 			margin 10px 0 0
 			padding  5px 0 0
 			border-left: 0
-			border-top: 1px solid #245eea
+			border-top: 1px solid mBr
 			font-size: 12px
 .contacts
 	float: right
@@ -83,7 +83,7 @@ header
 		background-image: url(../img/icons/phone.png)
 		margin-left: 40px
 	&-text
-		color: #245eea
+		color: mBr
 		font-size: 14px
 		font-weight: normal
 	&-link
