--- a/_app/styl/conf/1-main.styl
+++ b/_app/styl/conf/1-main.styl
@@ -2,7 +2,8 @@
 	padding 0 0 60px
 	min-height 100vh
 	text-align center
-	background-image: url(../img/backs/main-conf.jpg)
+	background-color: #0F2057
+	background-image: url(../img/backs/main-conf.png)
 	background-repeat: no-repeat
 	background-position: center
 	background-size: cover
@@ -42,7 +43,7 @@
 		font-family: GM
 		font-size: 26px
 		font-weight: 600
-		color #CC922F
+		color mBr
 		@media screen and (max-width 991px)
 			font-size: 24px
 		@media screen and (max-width 560px)
@@ -52,7 +53,7 @@
 		font-size: 22px
 		span
 			display inline-block
-			color: #CC922F
+			color: mBr
 			font-weight: 600
 		@media screen and (max-width 991px)
 			font-size: 18px
