--- a/_app/styl/main/5-author.styl
+++ b/_app/styl/main/5-author.styl
@@ -1,51 +1,46 @@
 #author
-	padding 90px 0
-	@media screen and (max-width 991px)
-		padding 60px 0
-	@media screen and (max-width 560px)
-		padding 40px 0
-	@media screen and (max-width 385px)
-		padding 30px 0
+	padding 75px 0 0
+	background-color: #10193c
+	margin-bottom: 20px
+	.container
+		background-image: url(../img/images/author-logo.png)
+		background-repeat no-repeat
+		background-position: bottom 30px left
+		background-size 500px
+		padding-bottom: 130px
 .general-title-author
-	margin-bottom: 15px
-.author-subtitle
-	text-align center
-	font-size: 23px
-	font-weight: bold
-	margin-bottom: 45px
-	@media screen and (max-width 560px)
-		font-size: 20px
-		margin-bottom: 30px
+	width 100%
+	max-width 560px
+	color #fff
 .rect-author
-	background-color: #cc922f
-	width 550px
-	height 240px
+	background-color: mBr
+	width 890px
+	height 175px
 	z-index 5
 	top 210px
-	right -20px
+	right 270px
 	@media screen and (max-width 991px)
 		top auto
 		bottom: -20px
 	@media screen and (max-width 560px)
 		left 40px
 .author-container
-	background-color: #19334d
-	color #fff
-	padding 50px 40px
+	background-color: #F9F7F7
+	padding 50px 30px
 	position relative
-	margin 250px 0 0 50px
+	margin 70px 0 0
 	z-index 10
+	box-shadow: 0px 0px 57.04px 4.96px rgba(0, 42, 149, 0.19);
 	@media screen and (max-width 991px)
 		margin: 10px 0 0
 	@media screen and (max-width 560px)
 		padding 30px 20px
 .general-img-author
 	img
-		box-shadow: 0 0 24px rgba(#262729, .12)
-		top 0
-		right 110px
-		z-index 1
-		max-width 484px
+		top -90px
+		right -110px
+		z-index 10
+		max-width 728px
 	@media screen and (min-width 2295px)
 		img
 			right 150px
