--- a/_app/styl/main/6-form-2.styl
+++ b/_app/styl/main/6-form-2.styl
@@ -9,7 +9,7 @@
 		content: ''
 		display block
 		position absolute
-		background-color: #cc922f
+		background-color: mBr
 		width 560px
 		height 78px
 		left -15px
