--- a/_app/styl/main/8-last.styl
+++ b/_app/styl/main/8-last.styl
@@ -1,58 +1,52 @@
 #last
 	padding 90px 0
 	background-color:#182352
-	background-image: url(../img/backs/last.jpg)
+	background-image: url(../img/backs/last.png)
 	background-repeat: no-repeat
 	background-position: center
 	background-size: cover
 	text-align center
 	color: #fff
+	margin-top: 90px
 	@media screen and (max-width 991px)
 		padding 70px 0
 	@media screen and (max-width 560px)
 		padding 50px 0
 	@media screen and (max-width 385px)
 		padding 40px 0
+.last-title
+	font-family: GM
+	font-size: 35px
+	font-weight: 900
+	text-transform uppercase
+	@media screen and (min-width 2295px)
+		br
+			display none
+	@media screen and (max-width 1199px)
+		br
+			display none
+	@media screen and (max-width 991px)
+		font-size: 30px
+	@media screen and (max-width 560px)
+		font-size: 26px
+		margin 30px 0
+	@media screen and (max-width 385px)
+		margin 20px 0 30px
+		font-size: 22px
 .footer
 	&-title
 		font-family: GM
-		font-size: 35px
+		font-size: 20px
 		font-weight: 900
+		margin: 90px 0 25px
 		text-transform uppercase
-		@media screen and (min-width 2295px)
-			br
-				display none
-		@media screen and (max-width 1199px)
-			br
-				display none
-		@media screen and (max-width 991px)
-			font-size: 30px
-		@media screen and (max-width 560px)
-			font-size: 26px
-			margin 30px 0
-		@media screen and (max-width 385px)
-			margin 20px 0 30px
-			font-size: 22px
-	&-subtitle
-		font-family: GM
-		font-size: 25px
-		font-weight: 900
-		margin-bottom: 65px
-		text-transform uppercase
-		@media screen and (max-width 991px)
-			font-size: 22px
-			margin-bottom: 40px
-			br
-				display none
-		@media screen and (max-width 560px)
-			font-size: 20px
-		@media screen and (max-width 385px)
-			font-size: 18px
 	&-text
+		font-family: OS
 		font-size: 16px
 		margin-bottom: 5px
 		a
 			color #fff
+			display inline-block
 			&:focus
 				color #fff
 			&:hover
