--- a/_app/styl/main/9-modal.styl
+++ b/_app/styl/main/9-modal.styl
@@ -1,10 +1,6 @@
 .white-popup
 	position: relative;
-	background-color: #2A3350
-	background-image: url(../img/backs/main-conf.jpg)
-	background-repeat: no-repeat
-	background-position: center
-	background-size: cover
+	background-color: #f0f3f5
 	padding: 50px 20px;
 	width: auto;
 	max-width: 650px;
@@ -13,8 +9,6 @@
 		padding 30px 20px 20px
 	@media screen and (max-width 385px)
 		padding 30px 15px 15px
-.mfp-close-btn-in .mfp-close
-	color: #fff
 .form-modal
 	margin: 0 auto
 .modal-title
@@ -24,7 +18,6 @@
 	font-weight: bold
 	margin-bottom: 25px
 	text-transform uppercase
-	color #fff
 	@media screen and (max-width 560px)
 		font-size: 24px
 		margin-bottom: 20px
@@ -55,14 +48,15 @@
 	float: none
 	margin 0 auto 10px
 	width 100%
-	max-width 380px
+	max-width 440px
 .button-form-modal
 	display block
 	float: none
 	margin 0 auto
 	width 100%
-	max-width 380px
+	max-width 440px
 .checking-modal
 	max-width 440px
+	margin 5px auto 0
 	@media screen and (max-width 991px)
 		max-width 380px
