--- a/_app/styl/thanks/1-main.styl
+++ b/_app/styl/thanks/1-main.styl
@@ -2,7 +2,8 @@
 	padding 0 0 60px
 	min-height 100vh
 	text-align center
-	background-image: url(../img/backs/main-thanks.jpg)
+	background-color: #0F2057
+	background-image: url(../img/backs/main-conf.png)
 	background-repeat: no-repeat
 	background-position: center
 	background-size: cover
@@ -18,7 +19,7 @@
 		margin-bottom: 30px
 		span
 			display inline-block
-			background-color: #cc922f
+			background-color: mBr
 			color #fff
 			padding 5px 10px
 		small
