--- a/_app/pug/main/3-why.pug
+++ b/_app/pug/main/3-why.pug
@@ -6,7 +6,7 @@ mixin wi(n,p)
 
 section#why
 	.container
-		h3.general-title.general-title-center Мыслите шире – зарабатывайте больше!
+		h3.general-title.general-title-why Мыслите шире – зарабатывайте больше!
 			small Почему инвестировать в Сочи нужно именно сейчас
 		.row
 			+wi('1','Развитие инфраструктуры Краснодарского края – тренд последних лет!')
@@ -16,5 +16,5 @@ section#why
 			+wi('4','На 30% вырос спрос на жилую недвижимость в Сочи с начала 2021 года (по сравнению с таким же периодом 2020 года)')
 			+wi('5','137 % – средний показатель роста цены за 1 кв.м. в одном из ЖК ИНТЦ “Сириус” за 1,5 года – с 111,4 до 263 тыс. руб.')
 			+wi('6','Эксперты прогнозируют в 2021 году рост цен на уровне 2530%')
-		h4.why-after-title Узнайте подробности у нашего эксперта во время вебинара!
-		+b('', '', href, 'ЗАРЕГИСТРИРОВАТЬСЯ НА ОНЛАЙН-ВСТРЕЧУ')
+		h4.why-aftertitle Узнайте подробности у нашего эксперта во время вебинара!
+		+b('button-wrapper-center', 'button-up', href, 'ЗАРЕГИСТРИРОВАТЬСЯ НА ОНЛАЙН-ВСТРЕЧУ')
