--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -1,8 +1,8 @@
 #main
-	padding 0 0 90px
+	padding 0 0 65px
 	position relative
-	background-color: #04050B
-	background-image: url(../img/backs/main.jpg)
+	background-color: #0A1D37
+	background-image: url(../img/backs/main.png)
 	background-repeat: no-repeat
 	background-position: center
 	background-size cover
@@ -16,17 +16,23 @@
 		padding 0 0 30px
 .main
 	&-pre
-		font-family: GM
-		font-size: 14px
-		margin-bottom: 10px
-	&-title
-		font-family: GM
-		font-size: 30px
-		font-weight: 600
+		font-size: 16px
+		font-weight: bold
 		text-transform uppercase
+		margin-bottom: 20px
+	&-title
+		margin-left: 25px
+		font-family: GM
+		font-size: 39px
+		font-weight: 900
+		text-transform uppercase
+		margin-bottom: 10px
 		span
-			background-color: #cc922f
-			padding 5px 5px 10px
+			display inline-block
+			background-color: mBr
+			padding 15px 25px
+			line-height: .7
+			margin-left: -25px
 		@media screen and (max-width 1199px)
 			br
 				display none
@@ -37,10 +43,9 @@
 		@media screen and (max-width 385px)
 			font-size: 20px
 	&-subtitle
-		font-family: GM
-		font-size: 35px
-		font-weight: 900
-		margin 50px 0
+		font-size: 20px
+		font-weight: bold
+		margin 50px 0 15px
 		text-transform uppercase
 		@media screen and (max-width 1199px)
 			br
@@ -59,6 +64,14 @@
 			span
 				display inline-block
 				font-weight: bold
+	&-aftertitle
+		text-align center
+		font-size: 30px
+		font-family: GM
+		font-weight: normal
+		text-transform uppercase
+		letter-spacing 10px
+		margin-top: 40px
 .video-wrapper-main
 	max-width 560px
 	margin-top: 60px
