--- a/_app/styl/main/2-form.styl
+++ b/_app/styl/main/2-form.styl
@@ -1,13 +1,8 @@
 .form-section
-	padding 40px 0
-	background-color: #2A3350
-	background-image: url(../img/backs/main-conf.jpg)
-	background-repeat: no-repeat
-	background-position: center
-	background-size: cover
-	margin-top: 35px
+	padding 35px 0
+	background-color: #f0f3f5
 	@media screen and (max-width 560px)
-		padding 30px 0
+		padding 25px 0
 .form-title
 	font-family: GM
 	font-size: 35px
@@ -15,7 +10,7 @@
 	text-transform uppercase
 	margin-top: 10px
 	text-align center
-	color: #fff
+	color: #0f1f2f
 	@media screen and (max-width 991px)
 		font-size: 30px
 		margin 0 0 30px
@@ -32,12 +27,12 @@
 	display inline-block
 	border: 1px solid #4eb7f9
 	border-radius: 0
-	color: #fff;
+	color: #777070;
 	font-family: GM
 	font-size: 16px;
 	font-weight: normal;
 	text-align left
-	padding 20px 30px
+	padding 15px 30px 16px
 	transition: all .3s ease
 	width 100%
 	max-width 320px
@@ -61,7 +56,7 @@
 @-webkit-keyframes autofill
 	to
 		font-size: 16px
-		color:  #fff;
+		color: #777070;
 		background-color: transparent
 input:-webkit-autofill
 	-webkit-animation-name: autofill;
@@ -76,18 +71,16 @@ input:-internal-autofill-selected
 	padding-top: 10px;
 	color: #f00
 	text-align: center
-	font-weight: 600
+	font-weight: bold
 	line-height: 1
 .checking
 	display: table;
 	width 100%
 	max-width 440px
-	margin: 5px auto 0
+	margin: 5px 0 0
 	text-align: left
 	@media screen and (max-width 991px)
 		max-width 380px
-.checking-main
-	margin-left: 0
 @keyframes pulse
 	0%
 		box-shadow: 0 0 0 0 rgba(red, .62) inset
@@ -103,22 +96,22 @@ input:-internal-autofill-selected
 	text-align: left;
 	font-size: 12px
 	font-weight: 100
-	color #cfcdcd
+	color #8c8282
 	@media screen and (max-width 991px)
 		line-height: 20px
 .checking .check-label a
 	text-decoration: none
 	border-bottom: 1px dashed
 	display: inline
-	color #cfcdcd
+	color #8c8282
 	transition: all .3s ease
 	&:focus
 		border-bottom: 1px dashed
-		color #cfcdcd
+		color #8c8282
 	&:hover
 		border-bottom: none
 		text-decoration: none
-		color #cfcdcd
+		color #8c8282
 .checking .check-label:before
 	content: '';
 	background-color: transparent;
@@ -159,8 +152,7 @@ input:-internal-autofill-selected
 	border: 0;
 	left -99999px;
 .check:checked + .check-label:before
-	box-shadow: 1px 1px 0 0 #f7f3aa
-	background-color: #cc922f
+	background-color: mBr
 	animation: none
 .check:checked + .check-label:after
 	opacity: 1;
@@ -172,5 +164,5 @@ input:-internal-autofill-selected
 ::-moz-placeholder
 :-moz-placeholder
 :-ms-input-placeholder
-	color:#fff;
+	color:#777070;
 	opacity:1;
