--- a/_app/styl/main/3-why.styl
+++ b/_app/styl/main/3-why.styl
@@ -1,50 +1,59 @@
-#about
-	padding 90px 0 20px
+#why
+	padding 90px 0
+	margin-top: 90px
+	background-color: #D6E0EA
 	@media screen and (max-width 991px)
 		padding 60px 0
 	@media screen and (max-width 560px)
 		padding 40px 0
 	@media screen and (max-width 385px)
 		padding 30px 0
-.general-wrapper-about
-	margin-bottom: 30px
-.about-wrapper-list
-	li
-		list-style: none
-		padding-left: 25px
-		position relative
-		&:nth-child(2)
-			margin 35px 0
-			@media screen and (max-width 560px)
-				margin 20px 0
-		&:before
-			content: ''
-			display block
-			position absolute
-			top 7px
-			left 0
-			border-radius: 50px
-			background-color: #CC922F
-			width 14px
-			height 14px
-		@media screen and (max-width 1199px)
-			br
-				display none
-.about-img
+.general-title-why
+	margin-bottom: 0
+	small
+		display block
+		font-size: 18px
+		font-weight: bold
+		margin: 50px 0 35px
+.why-item
+	background-color: #fff
+	border-bottom: 5px solid #0f1f2f
+	padding 30px 25px
+	text-align center
 	width 100%
-	max-width 485px
-	margin 100px auto 0
-	display block
-	@media screen and (max-width 991px)
+	max-width 380px
+	margin 0 auto 30px
+	box-shadow: 0 0 46.41px 4.59px rgba(#15093f, .23)
+	&-icon
+		width 130px
+		height: 124px
 		margin 0 auto 40px
-.general-img-about
-	img
-		bottom: 60px
-		right 0
-		max-width 684px
-.rect-about
-	width 506px
-	height 193px
-	background-color: #16133f
-	top -20px
-	right -10px
+		background-image: url(../img/icons/why.png)
+		background-repeat: no-repeat
+		&-1
+			background-position: 0 0
+		&-2
+			background-position: -130px 0
+		&-3
+			background-position: -260px 0
+		&-4
+			background-position: -390px 0
+		&-5
+			background-position: -521px 0
+		&-6
+			background-position: -651px 0
+	&-text
+		font-family: GM
+		font-weight: 600
+		display flex
+		align-items: center
+		vertical-align: middle
+		text-transform uppercase
+		min-height 162px
+.why-aftertitle
+	text-align center
+	font-size: 25px
+	font-family: GM
+	font-weight: 900
+	text-transform uppercase
+	margin 30px 0 35px
