Main page is adapted

--- a/_app/pug/base/1-header.pug
+++ b/_app/pug/base/1-header.pug
@@ -16,7 +16,7 @@ header.header-light
 			.contacts
 				.contact.contact-tg
 					p.contact-text Присоединяйтесь
-					a.contact-link(href="https://mycapital.autoweboffice.ru/index.php?r=form/telegram&id_bot=4" target="_blank") Telegram-канал
+					a.contact-link(href="http://t.me/mycapitalbot" target="_blank") Telegram-канал
 				.contact.contact-phone
 					p.contact-text Позвонить нам
 					a.contact-link(href="callto:88007009598" target="_blank") 8 800 700 9598
