--- a/_app/styl/main/2-form.styl
+++ b/_app/styl/main/2-form.styl
@@ -79,6 +79,8 @@ input:-internal-autofill-selected
 	max-width 440px
 	margin: 5px 0 0
 	text-align: left
+	@media screen and (max-width 1199px)
+		margin 5px auto 0
 	@media screen and (max-width 991px)
 		max-width 380px
 @keyframes pulse
