--- a/_app/styl/main/7-modal.styl
+++ b/_app/styl/main/7-modal.styl
@@ -6,9 +6,9 @@
 	max-width: 650px;
 	margin: 20px auto;
 	@media screen and (max-width 560px)
-		padding 30px 20px 20px
+		padding 35px 20px
 	@media screen and (max-width 385px)
-		padding 30px 15px 15px
+		padding 30px 15px
 .form-modal
 	margin: 0 auto
 .modal-title
@@ -58,5 +58,3 @@
 .checking-modal
 	max-width 440px
 	margin 5px auto 0
-	@media screen and (max-width 991px)
-		max-width 380px
