--- a/_app/styl/base/2-base-1.styl
+++ b/_app/styl/base/2-base-1.styl
@@ -33,6 +33,7 @@
 		line-height: 1.2
 		min-width: 1px
 		font-size: 16px
+		padding 15px
 .general-wrapper
 	padding 40px 25px 55px
 	background-color: #f8f8f8
