--- a/_app/styl/conf/1-main.styl
+++ b/_app/styl/conf/1-main.styl
@@ -56,7 +56,7 @@
 			color: mBr
 			font-weight: 600
 		@media screen and (max-width 991px)
-			font-size: 18px
+			font-size: 20px
 		@media screen and (max-width 385px)
 			line-height: 1.3
 	&-list
@@ -79,6 +79,8 @@
 					background-position: -50px 0
 				&-3
 					background-position: -100px 0
+		@media screen and (min-width 2295px)
+			max-width 1000px
 		@media screen and (max-width 991px)
 			margin-bottom: 0
 			&-item
