--- a/_app/styl/main/1-main.styl
+++ b/_app/styl/main/1-main.styl
@@ -33,30 +33,29 @@
 			padding 15px 25px
 			line-height: .7
 			margin-left: -25px
-		@media screen and (max-width 1199px)
-			br
-				display none
 		@media screen and (max-width 991px)
-			font-size: 26px
+			font-size: 34px
+			margin-left: 0
+			span
+				margin-left: 0
 		@media screen and (max-width 560px)
-			font-size: 22px
+			font-size: 28px
+			span
+				padding 10px 15px
 		@media screen and (max-width 385px)
-			font-size: 20px
+			font-size: 24px
+			span
+				padding 5px 10px
+				line-height: 1
 	&-subtitle
 		font-size: 20px
 		font-weight: bold
 		margin 50px 0 15px
 		text-transform uppercase
-		@media screen and (max-width 1199px)
-			br
-				display none
 		@media screen and (max-width 991px)
-			font-size: 30px
 			margin 30px 0
-		@media screen and (max-width 560px)
-			font-size: 26px
 		@media screen and (max-width 385px)
-			font-size: 22px
+			font-size: 18px
 			margin 20px 0
 	&-info
 		&-text
@@ -72,8 +71,15 @@
 		text-transform uppercase
 		letter-spacing 10px
 		margin-top: 40px
+		@media screen and (max-width 560px)
+			margin-top: 25px
+			font-size: 25px
+		@media screen and (max-width 385px)
+			font-size: 22px
 .video-wrapper-main
 	max-width 560px
 	margin-top: 60px
+	@media screen and (min-width 2295px)
+		margin-top: 0
 	@media screen and (max-width 991px)
 		margin-top: 30px
