--- a/_app/styl/main/3-why.styl
+++ b/_app/styl/main/3-why.styl
@@ -4,10 +4,13 @@
 	background-color: #D6E0EA
 	@media screen and (max-width 991px)
 		padding 60px 0
+		margin-top: 60px
 	@media screen and (max-width 560px)
+		margin-top: 40px
 		padding 40px 0
 	@media screen and (max-width 385px)
 		padding 30px 0
+		margin-top: 30px
 .general-title-why
 	margin-bottom: 0
 	small
@@ -15,6 +18,9 @@
 		font-size: 18px
 		font-weight: bold
 		margin: 50px 0 35px
+		@media screen and (max-width 560px)
+			margin 30px 0 20px
+
 .why-item
 	background-color: #fff
 	border-bottom: 5px solid #0f1f2f
@@ -50,6 +56,21 @@
 		vertical-align: middle
 		text-transform uppercase
 		min-height 162px
+	@media screen and (min-width 2295px)
+		&-text
+			min-height 210px
+	@media screen and (max-width 1199px)
+		&-text
+			min-height 189px
+	@media screen and (max-width 991px)
+		&-text
+			min-height 162px
+	@media screen and (max-width 560px)
+		padding 20px
+		&-icon
+			margin-bottom: 20px
+		&-text
+			min-height 120px
 .why-aftertitle
 	text-align center
 	font-size: 25px
@@ -57,3 +78,9 @@
 	font-weight: 900
 	text-transform uppercase
 	margin 30px 0 35px
+	@media screen and (max-width 560px)
+		font-size: 22px
+		margin 25px 0 30px
+	@media screen and (max-width 385px)
+		font-size: 20px
+		margin 10px 0 20px
