--- a/_app/styl/main/4-plan.styl
+++ b/_app/styl/main/4-plan.styl
@@ -1,12 +1,20 @@
 #plan
 	padding 90px 0
+	@media screen and (max-width 991px)
+		padding 60px 0
+	@media screen and (max-width 560px)
+		padding 40px 0
+	@media screen and (max-width 385px)
+		padding 30px 0
 .rect-plan
 	z-index 0
-	width 670px
+	width 100%
 	height 280px
 	background-color: #0F1F2F
-	left -50%
+	left -80%
 	top calc(50% - 140px)
+	@media screen and (min-width 2295px)
+		left -50%
 .plan-list
 	li
 		list-style: none
@@ -23,6 +31,11 @@
 			background-color: mBr
 			top 7px
 			left 0
+	@media screen and (max-width 560px)
+		li
+			margin-bottom: 15px
+			&:last-child
+				margin-bottom: 30px
 .plan-text
 	position absolute
 	font-family: GM
@@ -33,8 +46,28 @@
 	right -75%
 	width 100%
 	max-width 600px
+	@media screen and (min-width 2295px)
+		right -60%
+	@media screen and (max-width 1199px)
+		bottom -30px
+		max-width 500px
+	@media screen and (max-width 991px)
+		position: static
+		max-width none
+		margin-top: 30px
+	@media screen and (max-width 560px)
+		font-size: 22px
+	@media screen and (max-width 385px)
+		font-size: 20px
+		margin-top: 20px
 .general-img-plan
 	img
 		right 0
 		top -35px
 		z-index 0
+	@media screen and (max-width 1199px)
+		img
+			right -100px
+	@media screen and (max-width 991px)
+		img
+			margin: 30px auto 0
