--- a/_app/styl/main/5-author.styl
+++ b/_app/styl/main/5-author.styl
@@ -2,23 +2,36 @@
 	padding 75px 0 0
 	background-color: #10193c
 	margin-bottom: 20px
+	overflow hidden
 	.container
 		background-image: url(../img/images/author-logo.png)
 		background-repeat no-repeat
 		background-position: bottom 30px left
 		background-size 500px
 		padding-bottom: 130px
+		@media screen and (max-width 991px)
+			padding-bottom: 160px
+			background-position: center bottom 30px
+			background-size auto 100px
+		@media screen and (max-width 385px)
+			background-size: auto 50px
+			padding-bottom: 100px
+			background-position: center bottom 15px
+	@media screen and (max-width 560px)
+		padding 40px 0 0
 .general-title-author
 	width 100%
 	max-width 560px
 	color #fff
 .rect-author
 	background-color: mBr
-	width 890px
+	width 1300px
 	height 175px
 	z-index 5
 	top 210px
-	right 270px
+	right 15%
+	@media screen and (min-width 2295px)
+		right 30%
 	@media screen and (max-width 991px)
 		top auto
 		bottom: -20px
@@ -46,7 +59,8 @@
 			right 150px
 	@media screen and (max-width 1199px)
 		img
-			right 50px
+			right -100px
+			top 0
 .form-author
 	width 100%
 	max-width 660px
