--- a/_app/styl/main/6-last.styl
+++ b/_app/styl/main/6-last.styl
@@ -10,9 +10,12 @@
 	margin-top: 90px
 	@media screen and (max-width 991px)
 		padding 70px 0
+		margin-top: 70px
 	@media screen and (max-width 560px)
+		margin-top: 50px
 		padding 50px 0
 	@media screen and (max-width 385px)
+		margin-top: 40px
 		padding 40px 0
 .last-title
 	font-family: GM
@@ -26,13 +29,11 @@
 		br
 			display none
 	@media screen and (max-width 991px)
-		font-size: 30px
+		font-size: 32px
 	@media screen and (max-width 560px)
-		font-size: 26px
-		margin 30px 0
+		font-size: 28px
 	@media screen and (max-width 385px)
-		margin 20px 0 30px
-		font-size: 22px
+		font-size: 24px
 .footer
 	&-title
 		font-family: GM
@@ -40,6 +41,11 @@
 		font-weight: 900
 		margin: 90px 0 25px
 		text-transform uppercase
+		@media screen and (max-width 560px)
+			margin 50px 0 20px
+		@media screen and (max-width 385px)
+			margin 30px 0 15px
+			font-size: 18px
 	&-text
 		font-family: OS
 		font-size: 16px
