--- a/_app/pug/main/3-why.pug
+++ b/_app/pug/main/3-why.pug
@@ -2,7 +2,7 @@ mixin wi(n,p)
 	.col-md-4
 		.why-item(class="why-item-"+n)
 			.why-item-icon(class="why-item-icon-"+n)
-			p.why-item-text=p
+			p.why-item-text!=p
 
 section#why
 	.container
@@ -10,11 +10,11 @@ section#why
 			small Почему инвестировать в Сочи нужно именно сейчас
 		.row
 			+wi('1','Развитие инфраструктуры Краснодарского края – тренд последних лет!')
-			+wi('2','Сочи – регион №1 по темпам роста цен на землю и объекты недвижимости')
+			+wi('2','Сочи – регион №1 по темпам роста цен на землю <br>и объекты недвижимости')
 			+wi('3','В Сочи полным ходом идёт строительство инновационного центра «Сириус», общей площадью 81,1 га, с огромной инфраструктурой')
 		.row
-			+wi('4','На 30% вырос спрос на жилую недвижимость в Сочи с начала 2021 года (по сравнению с таким же периодом 2020 года)')
+			+wi('4','На 30% вырос спрос <br>на жилую недвижимость <br>в Сочи с начала 2021 года <br>(по сравнению с таким же периодом 2020 года)')
 			+wi('5','137 % – средний показатель роста цены за 1 кв.м. в одном из ЖК ИНТЦ “Сириус” за 1,5 года – с 111,4 до 263 тыс. руб.')
-			+wi('6','Эксперты прогнозируют в 2021 году рост цен на уровне 2530%')
+			+wi('6','Эксперты прогнозируют <br>в 2021 году рост цен <br>на уровне 2530%')
 		h4.why-aftertitle Узнайте подробности у нашего эксперта во время вебинара!
 		+b('button-wrapper-center', 'button-up', href, 'ЗАРЕГИСТРИРОВАТЬСЯ НА ОНЛАЙН-ВСТРЕЧУ')
