--- a/_app/pug/main/5-author.pug
+++ b/_app/pug/main/5-author.pug
@@ -9,7 +9,7 @@ section#author
 				.rect.rect-author
 				.author-container
 					ul.general-list
-						li - Соучредитель Клуба Инвесторов My Capital Club
+						li - Соучредитель Клуба Инвесторов "Мой капитал"
 						li - Инвестор с успешным опытом реализации инвестиционных проектов на сумму более 1,8 млрд. рублей
 						li - Эксперт №1 в сфере доходных домов России
 						li - Серийный предприниматель
