--- a/_app/pug/main/8-last.pug
+++ b/_app/pug/main/8-last.pug
@@ -6,7 +6,9 @@ section#last
 			br
 			| на объекты недвижимости в Сочи!
 		.footer
-			h5.footer-title ПОДПИСЫВАЙТЕСЬ НА НОВОСТИ, ЧТОБЫ ВСЕГДА БЫТЬ В КУРСЕ САМЫХ ЛУЧШИХ ПРЕДЛОЖЕНИЙ ПО ИНВЕСТИРОВАНИЮ!
+			h5.footer-title ПОДПИСЫВАЙТЕСЬ НА НОВОСТИ, ЧТОБЫ ВСЕГДА БЫТЬ В КУРСЕ 
+				br
+				| САМЫХ ЛУЧШИХ ПРЕДЛОЖЕНИЙ ПО ИНВЕСТИРОВАНИЮ!
 			.soc-links
 				|
 				|
