--- a/_app/styl/main/3-why.styl
+++ b/_app/styl/main/3-why.styl
@@ -53,6 +53,7 @@
 		font-weight: 600
 		display flex
 		align-items: center
+		justify-content: center
 		vertical-align: middle
 		text-transform uppercase
 		min-height 162px
@@ -61,14 +62,17 @@
 			min-height 210px
 	@media screen and (max-width 1199px)
 		&-text
-			min-height 189px
+			min-height 216px
 	@media screen and (max-width 991px)
 		&-text
 			min-height 162px
 	@media screen and (max-width 560px)
 		padding 20px
+		&-text
+			min-height 200px
 		&-icon
 			margin-bottom: 20px
+	@media screen and (max-width 385px)
 		&-text
 			min-height 120px
 .why-aftertitle
