--- a/_app/styl/main/6-last.styl
+++ b/_app/styl/main/6-last.styl
@@ -41,8 +41,11 @@
 		font-weight: 900
 		margin: 90px 0 25px
 		text-transform uppercase
+		// @media screen and (max-width 991px)
 		@media screen and (max-width 560px)
 			margin 50px 0 20px
+			br
+				display none
 		@media screen and (max-width 385px)
 			margin 30px 0 15px
 			font-size: 18px
