--- a/_app/pug/main/4-plan.pug
+++ b/_app/pug/main/4-plan.pug
@@ -7,12 +7,14 @@ section#plan
 				.col-md-7
 					.general-wrapper
 						ul.plan-list
-							li Почему Сочи называют надеждой России?
-							li ИНТЦ “Сириус” – объект 2021 года
+							li Почему Сочи — перспективный регион для инвестиций
+							li ИЖС: преимущества и доходность
 							li Космические цены: 400 тыс.руб. за 1 кв.м. – это не предел
-							li Доходный объект в Красной Поляне – наш новый проект
-							li Купить – реализовать – заработать: наша инвестиционная стратегия
-							li Короткий путь от инвестора-новичка до миллионера: сколько можно заработать на 1 кв.м. в Сочи
+							li Презентация 2 новых инвестпроектов по доходной недвижимости 
+								br
+								| в Сочи
+							li Наша инвестиционная стратегия с доходностью до 153% в год
+							li Сколько можно заработать на 1 кв.м. в Сочи
 						+b('', 'button-up', href, 'ХОЧУ ПОСЕТИТЬ ОНЛАЙН-ВСТРЕЧУ!')
 						p.plan-text Покупка жилья в Сочи – не мечта, 
 							br
