--- a/_app/styl/main/4-plan.styl
+++ b/_app/styl/main/4-plan.styl
@@ -31,6 +31,10 @@
 			background-color: mBr
 			top 7px
 			left 0
+	@media screen and (max-width 991px)
+		li
+			br
+				display none
 	@media screen and (max-width 560px)
 		li
 			margin-bottom: 15px
@@ -51,6 +55,8 @@
 	@media screen and (max-width 1199px)
 		bottom -30px
 		max-width 500px
+		br
+			display none
 	@media screen and (max-width 991px)
 		position: static
 		max-width none
