--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -3,17 +3,22 @@ section#main
 	.container
 		.row
 			.col-md-6
-				p.main-pre Приглашаем Вас на онлайн-встречу
+				p.main-pre Приглашаем Вас 
+					span на онлайн-встречу
 				h1.main-title Инвестиции 
 					br
 					span в недвижимость Сочи
-				h2.main-subtitle Цены за 1 кв.м. растут, как на дрожжах!
+				h2.main-subtitle На рынке недвижимости Сочи ажиотаж: 
+					br
+					| цены растут, как на дрожжах!
 				.main-info
 					p.main-info-text Дата и время проведения: 
-						span 20 мая, в 19:00(Мск)
+						span 17 июня, в 19:00 (мск)
 					p.main-info-text Ведущий: 
 						span Юрий Медушенко
 			.col-md-6
 				.video-wrapper.video-wrapper-main
 					iframe(src!="https://www.youtube.com/embed/?autoplay=1&mute=1&modestbranding=1" allowfullscreen)
-		h3.main-aftertitle Успейте заработать на этом!
+		h3.main-aftertitle Выиграйте вместе с нами 
+			br
+			| на дефиците предложений на рынке!
