--- a/_app/pug/main/3-why.pug
+++ b/_app/pug/main/3-why.pug
@@ -9,11 +9,11 @@ section#why
 		h3.general-title.general-title-why Мыслите шире – зарабатывайте больше!
 			small Почему инвестировать в Сочи нужно именно сейчас
 		.row
-			+wi('1','Развитие инфраструктуры Краснодарского края – тренд последних лет!')
 			+wi('2','Сочи – регион №1 по темпам роста цен на землю <br>и объекты недвижимости')
-			+wi('3','В Сочи полным ходом идёт строительство инновационного центра «Сириус», общей площадью 81,1 га, с огромной инфраструктурой')
+			+wi('1','Один из трендов рынка Сочи – спрос на загородную недвижимость. Стоимость участков на популярных направлениях выросла <br>в 3-5 раз')
+			+wi('3','С 1 июля 2021 года планируют ввести ограничение <br>на строительство многоквартирных домов. Будет разрешено ИЖС домов, площадью не более 300 кв. м. и высотой не более 12 м.')
 		.row
-			+wi('4','На 30% вырос спрос <br>на жилую недвижимость <br>в Сочи с начала 2021 года <br>(по сравнению с таким же периодом 2020 года)')
+			+wi('4','Рост цен начался осенью 2020 года, когда россияне стали выбирать город <br>в качестве подходящего места для самоизоляции. Только С НАЧАЛА 2021 ГОДА СПРОС НА ЖИЛУЮ НЕДВИЖИМОСТЬ ВЫРОС НА 30%')
 			+wi('5','137 % – средний показатель роста цены за 1 кв.м. в одном из ЖК ИНТЦ “Сириус” за 1,5 года – с 111,4 до 263 тыс. руб.')
 			+wi('6','Эксперты прогнозируют <br>в 2021 году рост цен <br>на уровне 2530%')
 		h4.why-aftertitle Узнайте подробности у нашего эксперта во время вебинара!
