page 2 is typeseted and stylezed

--- a/_app/index.pug
+++ b/_app/index.pug
@@ -17,6 +17,7 @@
 -var form_target = '_blank';
 -var politics = 'politics.pdf';
 -var fbTag = true;
+-var index1 = true;
 
 mixin gt(cl,h3)
 	h3.general-title(class=cl)
