--- a/_app/pug/base/3-scripts.pug
+++ b/_app/pug/base/3-scripts.pug
@@ -1,2 +1,5 @@
-script(src=path+"js/libs.min.js")
+if index1
+	script(src=path+"js/libs.min.js")
+if index2
+	script(src=path+"js/libs-2.min.js")
 script(src=scripts)
