Page 2 is adapted

--- a/_app/2.pug
+++ b/_app/2.pug
@@ -31,7 +31,7 @@ html(lang="ru")
 			include pug/2/3-why
 			include pug/2/4-info
 			include pug/2/5-author
-			include pug/2/6-form-2
+			include pug/2/2-form
 			include pug/2/8-last
 		include pug/base/3-scripts
 		include pug/scripts/body_bottom_scripts
