--- a/_app/pug/2/1-main.pug
+++ b/_app/pug/2/1-main.pug
@@ -1,18 +1,22 @@
 section#main
 	include ../base/1-header
-	.container
+	.container.container-main
 		.row
 			.col-md-7
-				h1.main-title Давно искали перспективные проекты
+				h1.main-title Давно искали перспективные проекты 
 					br
 					| в сфере недвижимости?
 				h2.main-subtitle Они перед вами!
-				p.main-text Мы запускаем 2 проекта по ИЖС домов в Сочи с доходностью до 32% годовых!
+				p.main-text Мы запускаем 2 проекта по ИЖС домов в Сочи 
+					br
+					| с доходностью до 32% годовых!
 				.main-info
-					p.main-info-text Дефицит недвижимости Сочи «на руку» инвесторам!
+					p.main-info-text Дефицит недвижимости в Сочи «на руку» инвесторам!
 					p.main-info-text Ведущий презентации – Юрий Медушенко, соучредитель клуба инвесторов «Мой капитал»
 			.col-md-5
-				p.main-pre Смотрите видео с презентации проекта, которая прошла 29 мая!
+				p.main-pre Смотрите видео с презентации проекта, 
+					br
+					| которая прошла 29 мая!
 				.video-wrapper.video-wrapper-main
 					iframe(src!="https://www.youtube.com/embed/odnIu0a19XU?autoplay=1&mute=1&modestbranding=1" allowfullscreen)
 		h3.main-aftertitle Выиграйте вместе с нами 
