--- a/_app/pug/2/4-info.pug
+++ b/_app/pug/2/4-info.pug
@@ -1,38 +1,46 @@
 section#info
 	.container
-		.rect.rect-info.rect-info-1
-		.rect.rect-info.rect-info-2
+		//- .rect.rect-info.rect-info-1
+		//- .rect.rect-info.rect-info-2
 		.content
 			+gt('general-title','Информация о проектах')
-			.row
-				.col-md-10
-					.general-wrapper.general-wrapper-info
-						h4.info-title Проект «Строительство жилого посёлка из 6-ти домов в с. Бестужевское»
-						p.info-text Село Бестужевское находится в 25 км к юго-востоку от Центрального Сочи и в 8 км от Адлера. Мы купили там 3 смежных участка, общей площадью почти 27 соток.
-						p.info-text Мы разделим их на 6 участков и зону отдыха (пруд, детская площадка, зона для барбекю), построим на них 6 домов и продадим в качестве отдельных объектов недвижимости по 15 млн руб. Срок реализации проекта – 6-8 месяцев.
-						h5.info-subtitle Условия для инвесторов
-						ul.info-list
-							li Общий бюджет проекта – 53 281 000 руб.
-							li Сумма необходимых инвестиций – 38 000 000 руб.
-							li Минимальная сумма вложений – 500 тыс. руб.
-							li Доходность инвестора – 24% за год
-							li Доходность проекта – 51,40%
-			.row
-				.col-md-8.col-md-push-4
-					.general-wrapper
-						h4.info-title Проект «Строительство 2-х домов в микрорайоне «Белые акации»
-						p.info-text Микрорайон «Белые акации» расположен на одноимённой улицей, которая проходит в черте Адлера, над курортным городком. Это тихий, спокойный уголок города, которые окружен лесом и с которого открывается шикарный вид на море. Территория огорожена шлагбаумом. Инфраструктура – в 7-ми минутах езды на машине.
-						ul.general-list
-							li - Покупаем участок, площадью 8 соток
-							li - Межуем на 2 участка
-							li - Строим за 4 месяца 2 дома, площадью ~150 и ~200 кв.м.
-							li - Благоустраиваем территорию
-							li - Продаём по цене от 30 млн руб. за дом
-							li - Срок реализации проекта – 8 месяцев
-						h5.info-subtitle Условия для инвесторов
-						ul.info-list
-							li Себестоимость проекта – 20 040 000 руб.
-							li Сумма необходимых инвестиций – 16,8 млн. руб.
-							li Ожидаемая доходность проекта – до 153% годовых (в зависимости от темпов прода)
-							li Минимальная сумма вложений – 500 тыс. руб.
-							li Фиксированная доходность инвесторов – до 32% годовых
+			.info-item.info-item-1
+				.row
+					.col-md-5.col-md-push-7
+						.info-item-img.info-item-img-1
+							+imgs('', 'img/images/info-1.jpg', 'Бестужевское')
+					.col-md-7.col-md-pull-5
+						.general-wrapper.general-wrapper-info-item
+							h4.info-item-title Проект «Строительство жилого посёлка из 6-ти домов в с. Бестужевское»
+							p.info-item-text Село Бестужевское находится в 25 км к юго-востоку от Центрального Сочи и в 8 км от Адлера. Мы купили там 3 смежных участка, общей площадью почти 27 соток.
+							p.info-item-text Мы разделим их на 6 участков и зону отдыха (пруд, детская площадка, зона для барбекю), построим на них 6 домов и продадим в качестве отдельных объектов недвижимости по 15 млн руб. Срок реализации проекта – 6-8 месяцев.
+							h5.info-item-subtitle Условия для инвесторов
+							ul.info-item-list
+								li Общий бюджет проекта – 53 281 000 руб.
+								li Сумма необходимых инвестиций – 38 000 000 руб.
+								li Минимальная сумма вложений – 500 тыс. руб.
+								li Доходность инвестора – 24% за год
+								li Доходность проекта – 51,40%
+			.info-item.info-item-2
+				.row
+					.col-md-5
+						.info-item-img.info-item-img-2
+							+imgs('', 'img/images/info-2.jpg', 'Белые акации')
+					.col-md-7
+						.general-wrapper
+							h4.info-item-title Проект «Строительство 2-х домов в микрорайоне «Белые акации»
+							p.info-item-text Микрорайон «Белые акации» расположен на одноимённой улицей, которая проходит в черте Адлера, над курортным городком. Это тихий, спокойный уголок города, которые окружен лесом и с которого открывается шикарный вид на море. Территория огорожена шлагбаумом. Инфраструктура – в 7-ми минутах езды на машине.
+							ul.general-list
+								li - Покупаем участок, площадью 8 соток
+								li - Межуем на 2 участка
+								li - Строим за 4 месяца 2 дома, площадью ~150 и ~200 кв.м.
+								li - Благоустраиваем территорию
+								li - Продаём по цене от 30 млн руб. за дом
+								li - Срок реализации проекта – 8 месяцев
+							h5.info-item-subtitle Условия для инвесторов
+							ul.info-item-list
+								li Себестоимость проекта – 20 040 000 руб.
+								li Сумма необходимых инвестиций – 16,8 млн. руб.
+								li Ожидаемая доходность проекта – до 153% годовых (в зависимости от темпов прода)
+								li Минимальная сумма вложений – 500 тыс. руб.
+								li Фиксированная доходность инвесторов – до 32% годовых
