--- a/_app/pug/2/5-author.pug
+++ b/_app/pug/2/5-author.pug
@@ -1,6 +1,6 @@
 section#author
 	.container
-		+gt('general-title-left general-title-author', 'Клуб инвесторов «Мой Капитал» <br>— это профессиональное сообщество, где знают всё о приумножении средств')
+		+gt('general-title-left general-title-author', 'Клуб инвесторов «Мой Капитал» <br>— это профессиональное сообщество, где знают всё <br>о приумножении средств')
 		.row
 			.col-md-5.col-md-push-7
 				.general-img.general-img-author
