--- a/_app/styl/2/2-form.styl
+++ b/_app/styl/2/2-form.styl
@@ -13,6 +13,9 @@
 		@media screen and (max-width 991px)
 			font-size: 30px
 			margin 0 0 30px
+		@media screen and (max-width 767px)
+			br
+				display none
 		@media screen and (max-width 560px)
 			font-size: 26px
 		@media screen and (max-width 385px)
@@ -22,3 +25,6 @@
 		font-size: 20px
 		margin-bottom: 15px
 		text-transform uppercase
+@media screen and (max-width 767px)
+	.button-wrapper-form-1
+		margin-bottom: 30px
