--- a/_app/styl/main/1-main-0.styl
+++ b/_app/styl/main/1-main-0.styl
@@ -7,8 +7,8 @@
 	background-position: center
 	background-size cover
 	color #fff
-	text-align center
 	@media screen and (max-width 991px)
+		text-align center
 		padding 0 0 60px
 	@media screen and (max-width 560px)
 		padding 0 0 40px
@@ -80,3 +80,10 @@
 			font-size: 25px
 		@media screen and (max-width 385px)
 			font-size: 20px
+.video-wrapper-main
+	max-width 560px
+	margin-top: 60px
+	@media screen and (min-width 2295px)
+		margin-top: 0
+	@media screen and (max-width 991px)
+		margin-top: 30px
