--- a/_app/index.pug
+++ b/_app/index.pug
@@ -41,7 +41,7 @@ html(lang="ru")
 			include pug/main/3-why
 			include pug/main/4-plan
 			include pug/main/5-author
-			include pug/main/6-form-2
+			include pug/main/2-form
 			include pug/main/8-last
 		include pug/main/9-modal
 		include pug/base/3-scripts
