--- a/_app/pug/2/2-form.pug
+++ b/_app/pug/2/2-form.pug
@@ -2,12 +2,14 @@ section.form-section
 	.container
 		.row
 			.col-md-5
-				h3.form-section-title УЧАСТВОВАТЬ В ПРОЕКТАХ!
+				h3.form-section-title УЧАСТВОВАТЬ 
+					br
+					| В ПРОЕКТАХ!
 			.col-md-7
 				.row
-					.col-md-6
+					.col-md-6.col-sm-6
 						p.form-section-text с. Бестужевское
-						+b('button-wrapper-center', '', 'https://forms.amocrm.ru/zmzzwl', 'Инвестировать', '_blank')
-					.col-md-6
+						+b('button-wrapper-center button-wrapper-form-1', '', 'https://forms.amocrm.ru/zmzzwl', 'Инвестировать', '_blank')
+					.col-md-6.col-sm-6
 						p.form-section-text мкр-н "Белые акации"
 						+b('button-wrapper-center', '', 'https://forms.amocrm.ru/zmzzzr', 'Инвестировать', '_blank')
