--- a/_app/pug/2/3-why.pug
+++ b/_app/pug/2/3-why.pug
@@ -18,9 +18,9 @@ section#why
 			+wi('6','Эксперты прогнозируют <br>в 2021 году рост цен <br>на уровне 2530%')
 		h4.why-aftertitle Узнайте подробности у нашего эксперта во время вебинара!
 		.row
-			.col-md-4.col-md-offset-2
+			.col-md-4.col-sm-6.col-md-offset-2.col-sm-offset-0
 				p.form-section-text с. Бестужевское
-				+b('button-wrapper-center', '', 'https://forms.amocrm.ru/zmzzwl', 'Инвестировать', '_blank')
-			.col-md-4
+				+b('button-wrapper-center button-wrapper-form-1', '', 'https://forms.amocrm.ru/zmzzwl', 'Инвестировать', '_blank')
+			.col-md-4.col-sm-6
 				p.form-section-text мкр-н "Белые акации"
 				+b('button-wrapper-center', '', 'https://forms.amocrm.ru/zmzzzr', 'Инвестировать', '_blank')
