--- a/_app/styl/2/1-main.styl
+++ b/_app/styl/2/1-main.styl
@@ -12,6 +12,20 @@
 		padding 0 0 60px
 	@media screen and (max-width 560px)
 		padding 0 0 40px
+		.container-main
+			position relative
+			z-index 10
+		&:before
+			content: ''
+			display block
+			position absolute
+			top 0
+			left 0
+			right 0
+			bottom 0
+			width 100%
+			height 100%
+			background-color rgba(#000,.5)
 	@media screen and (max-width 385px)
 		padding 0 0 30px
 .main
@@ -26,6 +40,11 @@
 		font-size: 26px
 		font-weight: 900
 		text-transform uppercase
+		@media screen and (max-width 1199px)
+			br
+				display none
+		@media screen and (max-width 385px)
+			font-size: 22px
 	&-subtitle
 		display inline-block
 		background-color: mBr
@@ -33,10 +52,17 @@
 		line-height: 1
 		margin 25px 0
 		text-transform uppercase
+		@media screen and (max-width 560px)
+			font-size: 24px
+		@media screen and (max-width 385px)
+			font-size: 22px
+			padding 10px
 	&-text
 		font-size: 20px
 		text-transform uppercase
 		margin-bottom: 20px
+		@media screen and (max-width 385px)
+			font-size: 18px
 	&-info
 		&-text
 			margin-top: 5px
@@ -45,6 +71,8 @@
 				font-weight: bold
 			&:first-of-type
 				font-weight: bold
+		@media screen and (max-width 991px)
+			margin-bottom: 35px
 	&-aftertitle
 		text-align center
 		font-size: 30px
@@ -53,13 +81,15 @@
 		text-transform uppercase
 		letter-spacing 10px
 		margin-top: 40px
+		@media screen and (max-width 991px)
+			font-size: 25px
 		@media screen and (max-width 767px)
 			br
 				display none
 		@media screen and (max-width 560px)
 			margin-top: 25px
-			font-size: 25px
-		@media screen and (max-width 385px)
 			font-size: 20px
 .video-wrapper-main
 	max-width 560px
+	border: 1px solid #fff
+	box-shadow: 0 0 25px 15px rgba(#fff,.7)
