video added on main page

--- a/_app/pug/2/3-why.pug
+++ b/_app/pug/2/3-why.pug
@@ -16,11 +16,11 @@ section#why
 			+wi('4','Рост цен начался осенью 2020 года, когда россияне стали выбирать город <br>в качестве подходящего места для самоизоляции. Только С НАЧАЛА 2021 ГОДА СПРОС НА ЖИЛУЮ НЕДВИЖИМОСТЬ ВЫРОС НА 30%')
 			+wi('5','137 % – средний показатель роста цены за 1 кв.м. в одном из ЖК ИНТЦ “Сириус” за 1,5 года – с 111,4 до 263 тыс. руб.')
 			+wi('6','Эксперты прогнозируют <br>в 2021 году рост цен <br>на уровне 2530%')
-		h4.why-aftertitle Узнайте подробности у нашего эксперта во время вебинара!
+		h4.why-aftertitle Свяжитесь с нами, чтобы узнать подробности о наших проектах!
 		.row
 			.col-md-4.col-sm-6.col-md-offset-2.col-sm-offset-0
 				p.form-section-text с. Бестужевское
-				+b('button-wrapper-center button-wrapper-form-1', '', 'https://forms.amocrm.ru/zmzzwl', 'Инвестировать', '_blank')
+				+b('button-wrapper-center button-wrapper-form-1', '', 'https://forms.amocrm.ru/zmzzwl', 'Получить консультацию', '_blank')
 			.col-md-4.col-sm-6
 				p.form-section-text мкр-н "Белые акации"
-				+b('button-wrapper-center', '', 'https://forms.amocrm.ru/zmzzzr', 'Инвестировать', '_blank')
+				+b('button-wrapper-center', '', 'https://forms.amocrm.ru/zmzzzr', 'Получить консультацию', '_blank')
