--- a/_app/pug/2/4-info.pug
+++ b/_app/pug/2/4-info.pug
@@ -41,6 +41,6 @@ section#info
 							ul.info-item-list
 								li Себестоимость проекта – 20 040 000 руб.
 								li Сумма необходимых инвестиций – 16,8 млн. руб.
-								li Ожидаемая доходность проекта – до 153% годовых (в зависимости от темпов прода)
+								li Ожидаемая доходность проекта – до 153% годовых (в зависимости от темпов продаж)
 								li Минимальная сумма вложений – 500 тыс. руб.
 								li Фиксированная доходность инвесторов – до 32% годовых
