--- a/_app/pug/main/1-main.pug
+++ b/_app/pug/main/1-main.pug
@@ -1,19 +1,24 @@
 section#main
 	include ../base/1-header
 	.container
-		p.main-pre Приглашаем Вас 
-			span на онлайн-встречу
-		h1.main-title Инвестиции 
-			br
-			span в недвижимость Сочи
-		h2.main-subtitle На рынке недвижимости Сочи ажиотаж: 
-			br
-			| цены растут, как на дрожжах!
-		.main-info
-			p.main-info-text Дата и время проведения: 
-				span 17 июня, в 19:00 (мск)
-			p.main-info-text Ведущий: 
-				span Юрий Медушенко
+		.row
+			.col-md-6
+				p.main-pre Приглашаем Вас 
+					span на онлайн-встречу
+				h1.main-title Инвестиции 
+					br
+					span в недвижимость Сочи
+				h2.main-subtitle На рынке недвижимости Сочи ажиотаж: 
+					br
+					| цены растут, как на дрожжах!
+				.main-info
+					p.main-info-text Дата и время проведения: 
+						span 17 июня, в 19:00 (мск)
+					p.main-info-text Ведущий: 
+						span Юрий Медушенко
+			.col-md-6
+				.video-wrapper.video-wrapper-main
+					iframe(src!="https://www.youtube.com/embed/x6od1Qlcjls?autoplay=1&mute=1&modestbranding=1" allowfullscreen)
 		h3.main-aftertitle Выиграйте вместе с нами 
 			br
 			| на дефиците предложений на рынке!
