Thanks 2 page is done

--- a/_app/pug/thanks/1-main-2.pug
+++ b/_app/pug/thanks/1-main-2.pug
@@ -1,10 +1,9 @@
 section#main
 	include ../base/1-header
 	.container
-		h1.main-title Благодарим за регистрацию 
+		h1.main-title Благодарим за интерес, 
 			br
-			span на вебинар!
-			small Загляните в свой почтовый ящик и подтвердите адрес
+			| проявленный к нашим проектам!
 		.row
 			.col-md-6
 				+imgs('main-img','img/images/laptop.png','Laptop')
